--- a/css/common.css
+++ b/css/common.css
@@ -1,10 +1,15 @@
-/* ======== 7 завдання============= */
-:root {
+html {
   --primary-text-color: #000;
   --primary-bg-color: #fff;
+  --primary-font-family: "Roboto", sans-serif;
+  --primary-font-size: 0.875rem;
 }
 
 footer {
   --footer-text-color: #fff;
   --fuuter-bg-color: #000;
+}
+
+a {
+  text-decoration: none;
 }
