--- a/css/main.css
+++ b/css/main.css
@@ -1,49 +1,45 @@
 @import url("common.css");
-/* ======= 6 завдання============= */
-/* Виправити помилку у фрагменті
-* {
-  margin: 0;
-  padding: 0;
-}
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css);
 
-/* more styles */
-/* @import url("my-imported-styles.css"); 
-*/
-/* Відповідь: всі правила @ повинні бути з самого верху.
-Тобто порядок коду має бути такий
- @import url("my-imported-styles.css");
- * {
-  margin: 0;
-  padding: 0;
-}
-/* more styles */
-/* ===================================== */
-/* ========= 7, 8 завдання=============== */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-:root {
-  font-size: 100%;
-}
-
-body {
-  font-size: 140%;
-}
-
-h1 {
-  font-size: 240%;
-}
-
 body {
   color: var(--primary-text-color);
   background: var(--primary-bg-color);
+  font-family: var(--primary-font-family);
+  font-size: var(--primary-font-size);
+}
+
+h1,
+h2,
+h3 {
+  font-weight: 700;
+}
+
+h1 {
+  font-size: 1.45rem;
+}
+
+h2 {
+  font-size: 1.3rem;
+}
+
+.list-unstyled {
+  margin: 25px;
+  list-style: none;
 }
 
 footer {
   color: var(--footer-text-color);
   background: var(--fuuter-bg-color);
   margin-top: 10px;
+}
+
+.footer-social ul {
+  margin-left: 25px;
+  list-style: none;
 }
