--- a/css/main.css
+++ b/css/main.css
@@ -43,3 +43,25 @@ footer {
   margin-left: 25px;
   list-style: none;
 }
+
+.text-uppercase {
+  text-transform: uppercase;
+}
+
+.bg-dark {
+  background-color: black;
+}
+
+.text-white {
+  color: white;
+}
+
+.categories li {
+  color: indigo;
+  text-decoration: none;
+  font-size: 1.2rem;
+}
+
+.categories li a:hover {
+  background-color: lightgray;
+}
