--- a/exercises/lecture-04/css/main.css
+++ b/exercises/lecture-04/css/main.css
@@ -83,7 +83,7 @@ div ~ p {
     - Lightness =  50% */
 
 .translucent-box {
-  background-color: hsl(0deg, 100%, 50%);
+  background-color: hsl(0deg, 100%, 50% / 0.5);
 }
 
 /* ====== 7 завдання================== */
