--- a/css/common.css
+++ b/css/common.css
@@ -1,8 +1,6 @@
-:root {
+html {
   --primary-text-color: #000;
   --primary-bg-color: #fff;
-  --primary-font-family: "Roboto", sans-serif;
-  --primary-font-size: 0.875rem;
 }
 
 footer {
@@ -10,6 +8,6 @@ footer {
   --fuuter-bg-color: #000;
 }
 
-a {
+/* a {
   text-decoration: none;
-}
+} */
