--- a/css/common.css
+++ b/css/common.css
@@ -1,6 +1,11 @@
-html {
+:root {
   --primary-text-color: #000;
   --primary-bg-color: #fff;
+  --main-color: #009;
+  --anchor-color: #333;
+  --anchor-active-color: salmon;
+  --primary-font-family: "Roboto", sans-serif;
+  --primary-font-size: 0.875rem / 1.4;
 }
 
 footer {
@@ -8,6 +13,6 @@ footer {
   --fuuter-bg-color: #000;
 }
 
-/* a {
+a {
   text-decoration: none;
-} */
+}
