--- a/exercises/lecture-12/grid-areas/app.css
+++ b/exercises/lecture-12/grid-areas/app.css
@@ -27,11 +27,13 @@
 }
 
 @media only screen and (min-width : 768px) {
-    .grid-container {
+    grid-container {
+        display: grid;
+        grid-gap: 20px;
         grid-template-areas:
             'header'
-            'main'
             'sidebar'
+            'main'
             'footer';
     }
 }
